--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -12,7 +12,9 @@
     flex-direction: column;
 
     .arrowDownward {
+      display: inherit;
       align-self: center;
+      margin-bottom: 2vh;
       flex-shrink: 0;
       transform: rotate(180deg);
     }  
@@ -48,6 +50,7 @@
     h2 {
       font-size: 30px;
       color: $orangeColor;
+      margin-bottom: 1vh;
     }
 
     form {
@@ -58,13 +61,19 @@
       align-items: center;
       justify-content: space-around;
 
+      @include mobile {
+        width: 80%;
+        height: 80%;
+        justify-content: space-between;
+      }
+
       input {
         width: 90%;
         height: 30px;
         font-size: 14px;
 
         @include mobile {
-          height: 20px;
+          height: 8%;
         }
       }
 
@@ -74,7 +83,7 @@
         font-size: 14px;
 
         @include mobile {
-          height: 100px;
+          height: 70%;
         }
       }
 
