--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -13,6 +13,7 @@
         align-items: center;
         .arrowDownward {
             display: inherit;
+            margin-bottom: 2vh;
         }
     }
 
