--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -50,6 +50,7 @@
     @include mobile {
         .arrowDownward {
             position: relative;
+            display: inherit;
             flex-shrink: 0;
         }
     }
